# functional-rpg

./: CHANGELOG.md  README.md  functional-rpg.cabal
app/: Main.hs  Models.hs  Views.hs
