cabal-version:      3.0
name:               functional-rpg

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:
-- The package author(s).
author:             caturwmn

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         caturwira41@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common options
  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

  if arch(javascript)
     ld-options:
       -sEXPORTED_RUNTIME_METHODS=HEAP8

executable functional-rpg
    -- Import common warning flags.
    import:          
        options

    -- .hs or .lhs file containing the Main module.
    main-is:          
        Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Models,
        Views

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    
        base, miso, random, raw-strings-qq

    -- Directories containing source files.
    hs-source-dirs:   
        app

    -- Base language which the package is written in.
    default-language: 
        Haskell2010
